# cortex

./: .gitignore  Cargo.toml  LICENSE  README.md
cortex/: Cargo.toml
cortex/src/symbols/: kinds.rs  token.rs
samples/: debug.cx  tokens.cx
src/: args.rs  lib.rs  main.rs  sess.rs
src/ast/: mod.rs  symbol_table.rs  validate.rs
src/cortex/: Cargo.toml
src/cortex/src/: lib.rs  sess.rs
src/cortex/src/parser/: mod.rs
src/cortex_ast/: Cargo.toml
src/cortex_ast/src/: data_structures.rs  debug.rs  lib.rs
src/cortex_driver/: Cargo.toml
src/cortex_driver/src/: args.rs  lib.rs
src/cortex_errors/: Cargo.toml
src/cortex_errors/src/: diagnostic.rs  lib.rs
src/cortex_lex/: Cargo.toml
src/cortex_lex/src/: lib.rs
src/cortex_parse/: Cargo.toml
src/cortex_parse/src/: lib.rs
src/cortex_symbols/: Cargo.toml
src/cortex_symbols/src/: file.rs  ident.rs  lib.rs  span.rs  traits.rs
src/cortex_symbols/src/token/: kinds.rs  mod.rs
src/cortex_symbols/src/types/: mod.rs
src/cortex_type_check/: Cargo.toml
src/cortex_type_check/src/: lib.rs  symbol_table.rs
src/io/: error.rs  file.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
src/symbols/: kinds.rs  mod.rs  token.rs  types.rs
