[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
strum = "0.24"
strum_macros = "0.24"
clap = { version = "4.1.6", features=["derive", "error-context", "cargo"] }

[[bin]]
name = "cortex"
path = "src/cortex/src/main.rs"

[lib]
doctest = false
path = "src/cortex/src/lib.rs"
