[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
strum = "0.24"
strum_macros = "0.24"
clap = { version = "4.1.6", features=["derive", "error-context", "cargo"] }

[lib]
doctest = false
