[package]
name = "cortex_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features=["derive", "error-context", "cargo"] }

cortex_errors = { path = "../cortex_errors" }
cortex_symbols = { path = "../cortex_symbols" }
cortex_lex = { path = "../cortex_lex" }
cortex_parse = { path = "../cortex_parse" }
