[package]
name = "cortex_lex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"

cortex_symbols = { path = "../cortex_symbols" }
cortex_errors = { path = "../cortex_errors" }
