[package]
name = "cortex_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex_ast = { path = "../cortex_ast" }
cortex_lex = { path = "../cortex_lex" }
cortex_symbols = { path = "../cortex_symbols" }
cortex_errors = { path = "../cortex_errors" }
